# Amazon-Sales-Data-Engineering

./: .env.sample  pyproject.toml  readme.md  step_1_check_connection.py  step_2_stage_data.py  step_3_load_from_stage_to_source.py  step_4_source_to_curated.py  step_5_curated_to_consumption.py
Snowflake Worksheets/: 1. Setup.sql  2. Database and Schema.sql  3. Source Tables.sql  4. Common Schema.sql  5. Forex Exchange Rate.sql  6. View Staged Data.sql  7. Source to Curated Layer.sql  8. Consumption Layer.sql
amazon-sales-data/: exchange-rate-data.csv
